readonly for hostname textbox

--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -57,7 +57,7 @@
                                 <div class="form-group row">
                                     <div class="col-sm-6">
                                         <label for="HostName/IP" class="col-sm-12 form-label">HostName/IP</label>
-                                        <input class="form-control" type="text" id="ip" placeholder="HostName/IP *" required/>
+                                        <input class="form-control" type="text" id="ip" placeholder="HostName/IP *" required readonly/>
                                     </div>
                                     <div class="col-sm-2">
                                         <label for="Port" class="col-sm-12 form-label">Port</label>
