disable extract claim button while sending claim

--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -63,7 +63,7 @@
                                 </i> -->
                             </div>
                             <div class="col extract-btn">
-                                <button type="submit" class="btn btn-primary btn-signin">Extract Claims</button>
+                                <button id="extract-button" type="submit" class="btn btn-primary btn-signin">Extract Claims</button>
                             </div>
                         </div>
                     </div>
