change application icon,urls

--- a/login/loginui.html
+++ b/login/loginui.html
@@ -13,7 +13,7 @@
                 <div class="card">
                     <!-- Icon -->
                     <p id="version"></p>
-                    <img src="../images/log_in_logo.svg" class="profile-img-card" id="icon" alt="Logo" />
+                    <img src="../images/log_in_logo.svg" class="profile-img-card" style="max-height: 96px;" id="icon" alt="Logo" />
                     <div class="card-body" id="login-card">
                         <form class="form-signin" onsubmit="callLogin();return false">
                             <div class="form-group row">
