extract claim page : progress-bar added

--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -68,7 +68,16 @@
                         </div>
                     </div>
                 </form>
-
+                <div style="display: none;" id="claim-progress-bar">
+                        <hr>
+                        <p id="claim-progress-status"></p>
+                        <div id="myProgress">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated"
+                            id="progress-bar" style="width: 25%; background-color: #3060AA"></div>
+                        </div>
+                    </div>
+                </div>
                 <div style="display: none;" id="summary-container">
                     <hr>
                     <div class="summary-card">
