solve clob issue

--- a/login/loginui.html
+++ b/login/loginui.html
@@ -28,12 +28,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="form-check form-check-inline custom-checkbox">
-                                    <input class="form-check-input" type="radio" name="urlOption" value="STAG" checked="checked">
+                                    <input class="form-check-input" type="radio" name="urlOption" value="STAG">
                                     <label class="form-check-label" for="staging">Staging</label>
                                     <span class="checkmark"></span>
                                 </div>
                                 <div class="form-check form-check-inline custom-checkbox">
-                                    <input class="form-check-input" type="radio" name="urlOption" value="PROD">
+                                    <input class="form-check-input" type="radio" name="urlOption" value="PROD" checked="checked">
                                     <label class="form-check-label" for="production">Production</label>
                                     <span class="checkmark"></span>
                                 </div>
