hide update download dialog

--- a/login/loginui.html
+++ b/login/loginui.html
@@ -57,7 +57,7 @@
                             </div>
                         </form>
                     </div>
-                    <div id="upnotification" class="">
+                    <div id="upnotification" class="hidden">
                         <div id="notification" class="update-dialog">
                             <p id="message" class="title">New Update Available</p>
                             <p id="inner-message" class="label-text">Downloading Now</p>
