--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </form>
-                <div style="display: none;" id="claim-progress-bar">
+                <div style="display: none;" id="claim-progress-bar" class="pb-4">
                         <hr>
                         <p id="claim-progress-status"></p>
                         <div id="myProgress">
